setting salary calculator section the title and the container

--- a/Salary_Calculator/salary.html
+++ b/Salary_Calculator/salary.html
@@ -12,6 +12,14 @@
         rel="stylesheet">
     <title>Salary Calculator</title>
 </head>
+<main>
+    <!-- Net Salary Calculator section -->
+    <section class="net_salary_calc">
+           <!-- Title of the calculator -->
+        <h1>Salary Calculator</h1>
+         <!-- Container for the inputs and output -->
+        <div class="container">
+            <div class="inputs">
 
 <body>
 
