setting salary up salary input field

--- a/Salary_Calculator/salary.html
+++ b/Salary_Calculator/salary.html
@@ -20,6 +20,16 @@
          <!-- Container for the inputs and output -->
         <div class="container">
             <div class="inputs">
+                   <!-- Salary input field -->
+                   <div class="salary">
+                    <h2>Enter Basic Salary:</h2>
+                    <input type="number" id="salary" placeholder="Basic Salary">
+                </div>
+                 <!-- Benefits input field -->
+                <div class="benefits">
+                    <h2>Enter Benefits:</h2>
+                    <input type="number" id="benefits" placeholder="Benefits">
+                </div>
 
 <body>
 
