setting up the button and linking the empty js file

--- a/Salary_Calculator/salary.html
+++ b/Salary_Calculator/salary.html
@@ -30,6 +30,19 @@
                     <h2>Enter Benefits:</h2>
                     <input type="number" id="benefits" placeholder="Benefits">
                 </div>
+                 <!-- Button to trigger the calculation -->
+                 <button class="button">Calculator</button>
+
+                </div>
+                 <!-- Output section for the calculation result -->
+                <div class="output">
+                </div>            
+            </div>
+        </section>
+    </main>
+</body>
+<script src="./index.js"></script>
+</html>
 
 <body>
 
