--- a/Student_Grade_Generator/student.html
+++ b/Student_Grade_Generator/student.html
@@ -14,7 +14,20 @@
 </head>
 
 <body>
+    <main>
+        <!-- Section for student Grade Calculator -->
+        <section class="student_grade">
+            <h1 class="primary_header">Student Grade Generator</h1>
+            <div class="inputs">
+                <h2>Enter Marks:</h2>
+                <input type="number" max="100" min="0" id="php" placeholder="Php">
+                <input type="number" max="100" min="0" id="java" placeholder="Java">
+                <input type="number" max="100" min="0" id="flutter" placeholder="Flutter">
+                <input type="number" max="100" min="0" id="laravel" placeholder="Laravel">               
+                <button class="button">Generate Grade</button>
+            </div>
 
+        </section>
 </body>
 
 </html>
