section for displaying result

--- a/Student_Grade_Generator/student.html
+++ b/Student_Grade_Generator/student.html
@@ -26,8 +26,15 @@
                 <input type="number" max="100" min="0" id="laravel" placeholder="Laravel">               
                 <button class="button">Generate Grade</button>
             </div>
+        </section>
+        <!-- Section fo displaying results -->
+        <section class="result">
+            <p class="grade"></p>
+            <p class="total_marks"></p>
+            <p class="Percentage"></p>
 
         </section>
+    </main>
 </body>
 
 </html>
