--- a/Student_Grade_Generator/student.html
+++ b/Student_Grade_Generator/student.html
@@ -15,7 +15,7 @@
 
 <body>
     <main>
-        <!-- Section for student Grade Calculator -->
+        <!-- student Grade Calculator -->
         <section class="student_grade">
             <h1 class="primary_header">Student Grade Generator</h1>
             <div class="inputs">
@@ -27,7 +27,7 @@
                 <button class="button">Generate Grade</button>
             </div>
         </section>
-        <!-- Section fo displaying results -->
+        <!--displaying results -->
         <section class="result">
             <p class="grade"></p>
             <p class="total_marks"></p>
