--- a/Salary_Calculator/salary.html
+++ b/Salary_Calculator/salary.html
@@ -13,7 +13,7 @@
     <title>Salary Calculator</title>
 </head>
 <main>
-    <!-- Net Salary Calculator section -->
+    <!--  Salary Calculator part -->
     <section class="net_salary_calc">
            <!-- Title of the calculator -->
         <h1>Salary Calculator</h1>
@@ -30,11 +30,11 @@
                     <h2>Enter Benefits:</h2>
                     <input type="number" id="benefits" placeholder="Benefits">
                 </div>
-                 <!-- Button to trigger the calculation -->
+                 <!-- Button for the calculation -->
                  <button class="button">Calculator</button>
 
                 </div>
-                 <!-- Output section for the calculation result -->
+                 <!-- calculating the result -->
                 <div class="output">
                 </div>            
             </div>
