--- a/Speed_Detector/speed.html
+++ b/Speed_Detector/speed.html
@@ -22,9 +22,7 @@
                 <button onclick="checkSpeed()">Check Speed</button>
             </div>
         </div>
-        <div id="result">
-            <p></p>
-        </div>
+     <p id="result"></p>
     </div>
 </body>
 <script src="./speed.js"></script>
