--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-            <li> <a href="./Student_Grade_Generator/student.html">student grade generator</a></li>
-            <li> <a href="./Speed_Detector/speed.html">Speed detector</a></li>
-            <li> <a href="./Salary_Calculator/salary.html">salary calculator</a></li>
+            <li> <a href="./Student_Grade_Generator/student.html">student-grade-generator</a></li>
+            <li> <a href="./Speed_Detector/speed.html">Speed-detector</a></li>
+            <li> <a href="./Salary_Calculator/salary.html">salary-calculator</a></li>
         </ul>
     </nav>
 </body>
